--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,5 +28,21 @@ spring:
   thymeleaf3:
     decoupled-logic: true
   devtools.livereload.port: 35730
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: ae2016a457af4af4a8451bb7d2f8d32b97f # ${KAKAO_OAUTH_CLIENT_ID}
+            client-secret: KAKAO_OAUTH_CLIENT_SECRET # ${KAKAO_OAUTH_CLIENT_SECRET}
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
+            client-authentication-method: POST
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 
 server.port: 8081
