--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -46,3 +46,11 @@ spring:
             user-name-attribute: id
 
 server.port: 8081
+
+project.board.url: http://localhost:8080
+
+---
+
+spring:
+  config.activate.on-profile: test
+  datasource.url: jdbc:h2:mem:testdb
